fixed URLs overflowing container

--- a/static/css/helper.css
+++ b/static/css/helper.css
@@ -14,6 +14,10 @@
 .margin-top-0 {
 	margin-top: 0;
 }
+
+.break-word {
+	word-wrap: break-word;
+}
 /*make footer stick to bottom*/
  body {
     display: flex;
